syntax="proto3";
package TestProtoImport;

message WithNesting {
  message Nested {
    int32 nestedField1 = 1;
    int32 nestedField2 = 2;
  }
  Nested nestedMessage1 = 1;
  Nested nestedMessage2 = 100;
}
